# python-object-store-library

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
object_store/: aws_s3.py  azure.py  min_io.py  object_storage.py  object_storage_creator.py  object_storage_type.py
