[metadata]
name = object_store
url = https://github.com/xlab-si/python-object-store-library
project_urls =
    Source Code = https://github.com/xlab-si/python-object-store-library
    Bug Tracker = https://github.com/xlab-si/python-object-store-library/issues
author = XLAB d.o.o.
author_email = pypi@xlab.si
license_file = LICENSE
description = Python library for different object storages that have common methods.
long_description = file: README.md
long_description_content_type="text/markdown",
keywords =
    library
    object store
    python
    aws
    s3
    azure
    minio
    bucket
    container
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
    minio==5.0.4
    boto3==1.10.9
    azure==4.0.0
    azure-storage==0.36.0